# mothcdc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
examples/: CATBENCH_RESULTS.md  REALBENCH_RESULTS.md  catbench.rs  chunk_only.rs  compare.rs  file_dedup.rs  frontier.rs  realbench.rs
proptest-regressions/: caterpillar.txt
src/: capi.rs  caterpillar.rs  lib.rs  mincdc.rs  neon.rs  scalar.rs  x86_64.rs
tests/: invariants.rs  roundtrip.rs
tools/: download-linux.sh  size_distr.py
