[package]
name = "mincdc"
version = "0.1.0"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
license = "Zlib"
repository = "https://github.com/orlp/mincdc"
readme = "README.md"
keywords = ["cdc", "chunking"]
categories = ["algorithms", "compression"]
description = "A very simple yet efficient content-defined chunking algorithm."
edition = "2024"
rust-version = "1.85"
exclude = ["assets", "tools"]

[dev-dependencies]
rand = "0.9.2"
fastcdc = "3.2.1"
foldhash = "0.2.0"

[dependencies]
