[package]
name = "mincatcdc"
version = "0.2.0"
authors = ["Orson Peters <orsonpeters@gmail.com>", "Russell Romney"]
license = "Zlib"
repository = "https://github.com/russellromney/mincatcdc"
readme = "README.md"
keywords = ["cdc", "chunking", "deduplication"]
categories = ["algorithms", "compression"]
description = "A fork of MinCDC adding a caterpillar layer: metadata-efficient content-defined chunking on redundant data."
edition = "2024"
rust-version = "1.85"
exclude = ["assets", "tools"]

[dev-dependencies]
rand = "0.9.2"
fastcdc = "4.0.1"
foldhash = "0.2.0"

[dependencies]
