[package]
name = "mincatcdc"
version = "0.5.0"
authors = ["Orson Peters <orsonpeters@gmail.com>", "Russell Romney"]
license = "Zlib"
repository = "https://github.com/russellromney/mincatcdc"
readme = "README.md"
keywords = ["cdc", "chunking", "deduplication"]
categories = ["algorithms", "compression"]
description = "A fork of MinCDC adding a caterpillar layer: metadata-efficient content-defined chunking on redundant data."
edition = "2024"
# 1.89 because the x86 AVX-512 intrinsics in src/x86_64.rs stabilized in 1.89
# (the crate does not build on x86 below that). Other targets only need 1.85.
rust-version = "1.89"
exclude = ["assets", "tools"]

[dev-dependencies]
rand = "0.9.2"
fastcdc = "4.0.1"
foldhash = "0.2.0"
proptest = "1"

[dependencies]
